# ros2_system_manager

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  package.xml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-push.yml
examples/: messages.py  test.py
launch/: joy_system_manager.launch.py
robot_docker_manager/: __init__.py  __main__.py  exceptions.py  robot_manager.py  service.py
ros2_system_manager/: __init__.py  __main__.py  common.py  exceptions.py  joy2sm.py  ros2_system_manager.py  ros_system_manager.py  service.py  system_manager.py
ros_system_manager/: __main__.py  ros_system_manager.py  service.py  system_manager.py
services/: robot_manager.service  ros2_system_manager.service  ros_system_manager.service
srv/: system.srv
test/: test_copyright.py  test_flake8.py  test_pep257.py
